--- a/laravel-comics/resources/sass/app.scss
+++ b/laravel-comics/resources/sass/app.scss
@@ -78,11 +78,26 @@ main {
 
 }
 
+.load-button-container {
+    display: flex;
+    justify-content: center;
+}
+
+.load-button {
+    padding: 5px 35px;
+    font-size: 20px;
+    background-color: #0082F9;
+    color: white;
+    border: none;
+    cursor: pointer;
+
+    z-index: 10;
+    display: inline-block;
+
+}
+
 //CARDS
 
-.margin-card {
-    margin-top: 30px;
-}
 
 .card-container1 {
     width: 200px;
