--- a/laravel-comics/resources/sass/app.scss
+++ b/laravel-comics/resources/sass/app.scss
@@ -117,3 +117,36 @@ main {
     object-position: top;
 
 }
+
+
+//SHOP
+.shop-navigation {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    background-color: #0082F9;
+    color: white;
+    max-width: 100%;
+}
+
+
+.shop-item a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+}
+
+.shop-item img {
+    max-width: 20%;
+    height: auto;
+    margin-right: 5px;
+}
+
+.shop-name {
+    font-size: 0.8em;
+    display: inline-block;
+    white-space: nowrap;
+}
