--- a/laravel-comics/resources/sass/app.scss
+++ b/laravel-comics/resources/sass/app.scss
@@ -192,3 +192,54 @@ main {
     color: #0056b3;
 
 }
+
+
+//FOOTER
+footer {
+    background-color: #303030;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 0.9em;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.left-button button.signup-button {
+    background-color: #303030;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-weight: bold;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #0056b3;
+}
+
+.left-section button.signup-button:hover {
+    background-color: #303030;
+}
+
+.right-section a {
+    margin-left: 10px;
+}
+
+.right-section a:first-child {
+    margin-left: 0;
+}
+
+.right-section img {
+    width: 30px;
+    height: 30px;
+    vertical-align: middle;
+
+}
